--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Music_App1</string>
     <!-- TODO: Remove or change this placeholder text -->
-    
+
     <string name="tao_playlist">Tạo playlist\n</string>
     <string name="album">Album\n</string>
     <string name="playlist">Playlist\n</string>
@@ -12,4 +12,6 @@
     <string name="tai_xuong">Tải xuống</string>
     <string name="bai_hat_yeu_thich">Bài hát yêu thích</string>
     <string name="title_nofication">Hôm nay nghe gì</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
