--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,40 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Music_App1</string>
+    
+    
+    
+    <string name="search_hint" tools:ignore="ExtraTranslation">Tìm kiếm...</string>
+    <string name="popular_songs" tools:ignore="ExtraTranslation">Bài hát phổ biến</string>
+    
+    <string name="new_songs" tools:ignore="ExtraTranslation">Bài hát mới</string>
+    <string name="menu_home" tools:ignore="ExtraTranslation">Home</string>
+    <string name="menu_all_songs" tools:ignore="ExtraTranslation">All Songs</string>
+    <string name="menu_featured_songs" tools:ignore="ExtraTranslation">Featured Songs</string>
+    <string name="menu_popular_songs" tools:ignore="ExtraTranslation">Popular Songs</string>
+    <string name="menu_new_songs" tools:ignore="ExtraTranslation">New Songs</string>
+    
+    
+    
+    
+    
+    
+    <string name="play_all" tools:ignore="ExtraTranslation">Play all</string>
+    <string name="view_all" tools:ignore="ExtraTranslation">View all</string>
+    <string name="music_player" tools:ignore="ExtraTranslation">Music Player</string>
+    <string name="views" tools:ignore="ExtraTranslation">Views</string>
+    <string name="label_start_time" tools:ignore="ExtraTranslation">00:00</string>
+    
+    // action
+    <string name="action_ok" tools:ignore="ExtraTranslation">OK</string>
+    <string name="action_cancel" tools:ignore="ExtraTranslation">Cancel</string>
+    
+    
+    // Hint
+    <string name="hint_search_name" tools:ignore="ExtraTranslation">Song name…</string>
+    
+    // Label
+    <string name="label_artist" tools:ignore="ExtraTranslation">Artist:</string>
+    
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
